# uboot_shell

./: .gitignore  Makefile  README  README.md  USHELL.code-workspace  list.h  main  main.c  readline.c  readline.h  shell_cmd.c  shell_cmd.h  shell_config.h  type.h
src/: CMakeLists.txt
src/include/: autoconf.h  config.h  list.h  shell_config.h  type.h  types.h
src/source/: readline.c
